# attest

./: AGENTS.md  Cargo.toml  QA.md  README.md  SKILL.md
.github/assets/: diagnostic.tape  parallel.tape  serial.tape  xtrace.tape
examples/: failing.test  md5sum.test  sleep.test
src/: cgroup.rs  diagnostics.rs  discovery.rs  main.rs  output.rs  parser.rs  runner.rs
