[package]
authors = ["cilki"]
description = "Dead simple test framework for the age of AI"
edition = "2024"
license = "Unlicense"
name = "attest"
version = "0.2.0"

[features]
default = ["cgroup"]
cgroup = []

[dependencies]
anyhow = "1.0.100"
libc = "0.2"
brush-parser = "0.3"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
tempfile = "3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0.2"
indicatif = "0.17"
annotate-snippets = "0.12"
similar = "3"
